Distort Fix

--- a/wwwroot/css/custom.css
+++ b/wwwroot/css/custom.css
@@ -2,9 +2,9 @@
 .angelo-pic {
   object-fit: cover;
   max-height: 350px;
-  height: auto;
+  height: 510px;
   max-width: 100%;
-  width: auto;
+  min-width: 250px;
 }
 
 .text-neon {
